better sources for  hypervisor slides

--- a/slides/hypervisors/main.tex
+++ b/slides/hypervisors/main.tex
@@ -20,5 +20,6 @@
     \end{columns}
 \end{frame}
 
-\finalslide{Sources}
-\printbibliography[title = {Sources}, heading=none]
+\begin{frame}[noframenumbering,allowframebreaks]{Sources}
+    \printbibliography[title = {Sources}, heading = none]
+\end{frame}
