fixed title slide

--- a/slides/hypervisors/title.tex
+++ b/slides/hypervisors/title.tex
@@ -2,7 +2,7 @@
 % Document Title
 % ---------------------------------------------------------
 \title[BluePill]{The Truth behind Matrix:\\ Virtual Machines and the Blue Pill Environment}
-\subtitle{\Large{Hyporvisors}}
+\subtitle{\Large{Hypervisors}}
 \author[M. Almert]{Marcus Almert}
 \institute[Bauhaus-Universität Weimar]{Bauhaus-Universität Weimar\\[0.5cm] Winter Semester 2021/22}
 
