title slide improved

--- a/slides/hypervisors/template/theme.tex
+++ b/slides/hypervisors/template/theme.tex
@@ -45,7 +45,7 @@
     \begin{beamercolorbox}[sep=8pt,center]{author}
       \usebeamerfont{author}\insertauthor
     \end{beamercolorbox}
-    \vskip-1em\par % change here
+    %\vskip-1em\par % change here
     \begin{beamercolorbox}[sep=8pt,center]{institute}
       \usebeamerfont{institute}\insertinstitute
     \end{beamercolorbox}
