added picture to hypervisor slides

--- a/slides/hypervisors/bib.bib
+++ b/slides/hypervisors/bib.bib
@@ -1,5 +1,11 @@
-@misc{proxmox-logo,
+@misc{proxmox_logo,
 author = {Proxmox Server Solutions GmbH},
 title = {Proxmox Logo (stacked)},
 url = {https://www.proxmox.com/images/proxmox/proxmox-logo-color-stacked.png},
+}
+
+@misc{proxmox_overview,
+author = {Proxmox Server Solutions GmbH},
+title = {Proxmox VE Cluster Summary},
+url = {https://www.proxmox.com/images/proxmox/screenshots/Proxmox-VE-7-0-Cluster-Summary.png},
 }
