--- a/slides/hypervisors/main.tex
+++ b/slides/hypervisors/main.tex
@@ -15,7 +15,7 @@
             \begin{figure}
                 \centering
                 \includegraphics[width=0.6\linewidth]{proxmox-logo.png}\\
-                \cite{proxmox-logo}
+                \cite{proxmox_logo}
             \end{figure}
         \end{column}
     \end{columns}
@@ -29,7 +29,16 @@
         \item KVM converts Linux to a bare-metal Hypervisor
         \item Every VM is managed as a regular Linux process
         \item Requires hardware virtualization support (AMD-V or Intel-VT-x)
+        \item Support for Linux and Windows
     \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \begin{figure}
+        \centering
+        \includegraphics[height=0.9\textheight]{Proxmox0.png}\\
+        Proxmox Cluster Summary~\cite{proxmox_overview}
+    \end{figure}
 \end{frame}
 
 \begin{frame}[noframenumbering,allowframebreaks]{Sources}
